small update some figures

--- a/1-Introduction-to-Python/5-0-Introduction-function.ipynb
+++ b/1-Introduction-to-Python/5-0-Introduction-function.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1a35a70",
    "metadata": {},
    "outputs": [],
@@ -102,10 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b42612fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1597\n"
+     ]
+    }
+   ],
    "source": [
     "def fib(n):\n",
     "    \"\"\"\n",
@@ -123,7 +131,7 @@
     "        a, b = b, a+b\n",
     "    return a\n",
     "\n",
-    "fib(2000)\n",
+    "print(fib(2000))\n",
     "fib?"
    ]
   },
@@ -138,20 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1b5a5937",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "for t in range(n):\n",
+      "    new_A = A[-1] + da(A[-1], I[-1], dt, k)\n",
+      "    new_I = I[-1] + di(I[-1], A[-1], dt, tau)\n",
+      "    I.append(new_I)\n",
+      "    A.append(new_A)\n",
+      "\n",
+      "Note that in that case it is necessary\n",
+      "to make a temporary save of the concentration\n",
+      "values, maybe keep that in mind, this might\n",
+      "become handy later :| \n"
+     ]
+    }
+   ],
    "source": [
-    "def compute_AI(): # Don't forget to add arguments\n",
-    "    # A, I = [a], [i] \n",
-    "    A, I = [], []\n",
-    "    # Uncoment above and\n",
-    "    # Do something here\n",
-    "    return A, I\n",
+    "answer(5)\n",
+    "# def compute_AI(): # Don't forget to add arguments\n",
+    "#     # A, I = [a], [i] \n",
+    "#     A, I = [], []\n",
+    "#     # Uncoment above and\n",
+    "#     # Do something here\n",
+    "#     return A, I\n",
     "\n",
-    "A, I = compute_AI()\n",
-    "plot_concentration_1cell(A, I)"
+    "# A, I = compute_AI()\n",
+    "# plot_concentration_1cell(A, I)"
    ]
   },
   {
