--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "75b06d7d",
    "metadata": {},
    "outputs": [],
@@ -84,13 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9d50f8b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_a{A[0]}_i{I[0]}_dt{dt}\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f'test_a{A[0]}_i{I[0]}_dt{dt}')\n",
-    "print('test_a{A[0]}_i{I[0]}_dt{dt}')"
+    "s = f'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
+    "s = 'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
+    "print(s)\n",
+    "# print()"
    ]
   },
   {
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c484937e",
    "metadata": {},
    "outputs": [],
@@ -152,10 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "112df024",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our current path:\n",
+      "/Users/leo.guignard/dvlp/CenTuri-Course-2022/1-Introduction-to-Python\n"
+     ]
+    }
+   ],
    "source": [
     "print('Our current path:')\n",
     "print(Path.cwd())"
@@ -182,10 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "86dfab72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "question_7/test_a0.4_i0.15_dt0.001.png\n",
+      "question_7/test_a0.4_i0.15_dt0.001.png\n"
+     ]
+    }
+   ],
    "source": [
     "## folder is the path previously created\n",
     "# Concatenation of two Paths\n",
@@ -221,7 +249,7 @@
     "folder = Path('question_7')\n",
     "for test_tau in np.linspace(.05, 1, 5):\n",
     "    for test_k in np.linspace(-1, 1, 5):\n",
-    "        A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
+    "#         A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
     "        plot_concentration_1cell(A, I,\n",
     "                                 save_path=folder / f'k{test_k}_tau{test_tau}.png')"
    ]
