--- a/2-Data-handling-and-visu/12-Animations.ipynb
+++ b/2-Data-handling-and-visu/12-Animations.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.load('Turing_pattern.npz')['arr_0']"
+    "A = np.load('Resources/Turing_pattern.npz')['arr_0']"
    ]
   },
   {
