--- a/2-Data-handling-and-visu/01-02-Intro-and-Line-plots.ipynb
+++ b/2-Data-handling-and-visu/01-02-Intro-and-Line-plots.ipynb
@@ -117,7 +117,7 @@
    "id": "aa5d9df5",
    "metadata": {},
    "source": [
-    "We are plotting what we want but, the `x` values are not the correct ones (in $[0, 30|]$ instead of $[-\\pi, 2\\pi]$).\n",
+    "We are plotting what we want but, the `x` values are not the correct ones (in $[0, 30]$ instead of $[-\\pi, 2\\pi]$).\n",
     "\n",
     "The reason is that we are only giving the `y` axis values (note that they are indeed ranging in $[-1, 1]$). So let's give the `x` values:\n",
     "\n"
