--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "75b06d7d",
    "metadata": {},
    "outputs": [],
@@ -84,23 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9d50f8b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_a{A[0]}_i{I[0]}_dt{dt}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = f'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
-    "s = 'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
-    "print(s)\n",
-    "# print()"
+    "s1 = f'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
+    "s2 = 'test_a{A[0]}_i{I[0]}_dt{dt}'\n",
+    "print(s1)\n",
+    "print(s2)"
    ]
   },
   {
@@ -128,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c484937e",
    "metadata": {},
    "outputs": [],
@@ -162,19 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "112df024",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Our current path:\n",
-      "/Users/leo.guignard/dvlp/CenTuri-Course-2022/1-Introduction-to-Python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Our current path:')\n",
     "print(Path.cwd())"
@@ -201,19 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "86dfab72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "question_7/test_a0.4_i0.15_dt0.001.png\n",
-      "question_7/test_a0.4_i0.15_dt0.001.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## folder is the path previously created\n",
     "# Concatenation of two Paths\n",
