--- a/2-Data-handling-and-visu/13-Seaborn.ipynb
+++ b/2-Data-handling-and-visu/13-Seaborn.ipynb
@@ -495,7 +495,7 @@
    "execution_count": 133,
    "id": "20bbdcfb",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
