--- a/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
+++ b/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
@@ -134,7 +134,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do that here"
+    "# Do that here\n",
+    "fig, ax = plt.subplots(figsize=(6, 5))\n",
+    "ax.plot(X, Y, label='legend')\n",
+    "ax.plot(X+.5, Y, label='legend2')\n",
+    "ax.set_xlabel('X label')\n",
+    "ax.set_ylabel('Y label')\n",
+    "ax.legend()"
    ]
   },
   {
@@ -280,7 +286,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
     "ax.plot(X1, Y1, '-', label='sin', lw=5)\n",
-    "ax.plot(X2, Y2, '-', label='cosin', lw=3, alpha=.5)\n",
+    "ax.plot(X2, Y2, '-o', label='cosin', lw=3, ms=10, alpha=.5)\n",
     "ax.legend()"
    ]
   },
