--- a/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
+++ b/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
@@ -122,6 +122,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf961d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmap(0.5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bdedcba2",
    "metadata": {},
@@ -164,7 +174,7 @@
    "source": [
     "np.random.seed(1)\n",
     "from Resources.UsefulFunctions import build_curve\n",
-    "..."
+    "build_curve?"
    ]
   },
   {
