--- a/2-Data-handling-and-visu/09-Histograms.ipynb
+++ b/2-Data-handling-and-visu/09-Histograms.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# creating some random data taken from a normal distribution\n",
     "# centered in 0 with a standard deviation of 1\n",
-    "data1 = np.random.normal(size=(1000))"
+    "data1 = np.random.normal(size=1000)"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "ax.hist(data1);"
+    "ax.hist(data1, cumulative=True);"
    ]
   },
   {
