--- a/2-Data-handling-and-visu/10-11-Boxplots-Violinplots-and-Scatter-plots.ipynb
+++ b/2-Data-handling-and-visu/10-11-Boxplots-Violinplots-and-Scatter-plots.ipynb
@@ -217,6 +217,21 @@
     "ax.scatter(X, Y, color=cmap(colors), s=sizes, alpha=.6, edgecolor='k')\n",
     "ax.set_aspect('equal')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e30fbdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmap = mpl.cm.get_cmap('viridis')\n",
+    "colors = np.linspace(0, 1, 700)\n",
+    "sizes = np.linspace(5, 100, 700)\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "ax.hist2d(X, Y, bins=[50, 20])\n",
+    "ax.set_aspect('equal')"
+   ]
   }
  ],
  "metadata": {
