--- a/2-Data-handling-and-visu/13-Seaborn.ipynb
+++ b/2-Data-handling-and-visu/13-Seaborn.ipynb
@@ -8,9 +8,9 @@
     "## On the usage of seaborn\n",
     "\n",
     "Seaborn is a library to use matplotlib in an \"easier\" way.\n",
-    "You can find information about it [there](seaborn.pydata.org/).\n",
+    "You can find information about it [there](https://seaborn.pydata.org/).\n",
     "\n",
-    "Eventhough it does not have to be that way, it mainly uses pandas dataframes as input (more info [there](pandas.pydata.org/))."
+    "Eventhough it does not have to be that way, it mainly uses pandas dataframes as input (more info [there](https://pandas.pydata.org/))."
    ]
   },
   {
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -41,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset"
+    "dataset.sort_values('bill_length_mm')"
    ]
   },
   {
@@ -51,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(data=dataset, x='flipper_length_mm', y='bill_depth_mm', hue='species')"
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "sns.scatterplot(data=dataset, x='flipper_length_mm', y='bill_depth_mm', hue='species', ax=ax)\n",
+    "ax.set_xlabel('')"
    ]
   },
   {
