--- a/2-Data-handling-and-visu/12-Animations.ipynb
+++ b/2-Data-handling-and-visu/12-Animations.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.load('Resources/Turing_pattern.npz')['arr_0']"
+    "A = np.load('Resources/Turing_pattern.npz')['arr_0'].astype(float)"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
     "ax.axis('off')\n",
-    "ax.imshow(A[:,:, -1], interpolation='bilinear')"
+    "ax.imshow(A[:,:, -1], interpolation='bilinear', cmap='magma')"
    ]
   },
   {
