--- a/3-Classes/Introduction-to-classes.ipynb
+++ b/3-Classes/Introduction-to-classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33d72ce6",
+   "id": "ee892f9a",
    "metadata": {},
    "source": [
     "# Introduction to classes\n",
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1adc9ec",
+   "execution_count": 1,
+   "id": "3a8d1d94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc1e857",
+   "id": "f53bba4c",
    "metadata": {},
    "source": [
     "Now, if one wants to add a cell to the list they need to make sure to update all the dictionaries together:"
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8389e2b",
+   "execution_count": 2,
+   "id": "4b879f99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e26767",
+   "id": "cb60b5a2",
    "metadata": {},
    "source": [
     "Instead of carrying all the dictionaries we can rather create a class `Cell` that will have as attribute the surface, volume and position:"
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "638a6be2",
+   "execution_count": 3,
+   "id": "c95b47e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89d5096",
+   "id": "7075f92e",
    "metadata": {},
    "source": [
     "We now have a class named `Cell`. You can create/instantiate a new object the following way:"
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ae56d7d",
+   "execution_count": 4,
+   "id": "6ed7af30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe1d05d3",
+   "id": "5a407d38",
    "metadata": {},
    "source": [
     "We can set values for the previously mentionned measurements the following way:"
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b11cecf5",
+   "execution_count": 5,
+   "id": "a646e6e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,17 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a6572ab",
+   "execution_count": 6,
+   "id": "ffbfec8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 50 [2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(c.surface, c.volume, c.position)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77e8f6b0",
+   "id": "9a421ea0",
    "metadata": {},
    "source": [
     "Functions can also be defined for classes (they are called methods of the class):"
@@ -158,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dc4e668d",
+   "execution_count": 7,
+   "id": "fa600f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10767eb1",
+   "id": "525a6016",
    "metadata": {},
    "source": [
     "Note the `self` keyword that refers to the object itself and therefore allows to access the attributes of the said object."
@@ -179,10 +187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb972dc4",
+   "execution_count": 8,
+   "id": "2717826d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.563429036687326\n"
+     ]
+    }
+   ],
    "source": [
     "c = Cell()\n",
     "c.surface = 10\n",
@@ -193,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ec6f91",
+   "id": "2970c567",
    "metadata": {},
    "source": [
     "Note that in that example, if you have not specified the surface and the volume before calling the class method, it will crash:"
@@ -201,10 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b30cf572",
+   "execution_count": 9,
+   "id": "274644a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the error was the following:\n",
+      "'Cell' object has no attribute 'volume'\n"
+     ]
+    }
+   ],
    "source": [
     "c = Cell()\n",
     "try:\n",
@@ -216,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c93d0c",
+   "id": "c0afe023",
    "metadata": {},
    "source": [
     "To check whether it is possible to run the method, one can do the following:"
@@ -224,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4ad3ae4",
+   "execution_count": 10,
+   "id": "75647555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,10 +270,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d42dc27b",
+   "execution_count": 11,
+   "id": "3cce4f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/78/4tskqbhd46jg4r1qcv_tqs9c0000gn/T/ipykernel_63722/1356701579.py:11: UserWarning: the volume and/or surface was not defined, returning 0\n",
+      "  warnings.warn('the volume and/or surface was not defined, returning 0')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = Cell()\n",
     "c.sphericity()"
@@ -256,10 +300,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d4a1808",
+   "execution_count": 12,
+   "id": "ad64e944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8059959770082347"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.volume = 1\n",
     "c.surface = 6\n",
@@ -268,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad27d78",
+   "id": "880c1ee7",
    "metadata": {},
    "source": [
     "The equivalent without a class would be something like that:"
@@ -276,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a63bf1c",
+   "execution_count": 13,
+   "id": "0b42ebdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68940f4e",
+   "id": "1f4f166e",
    "metadata": {},
    "source": [
     "Where the `volume` and `surface` would have been needed as parameters of the function. A typical call would have been like that:"
@@ -295,10 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "990c436c",
+   "execution_count": 14,
+   "id": "1a3e62cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.907943701227307"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "curr_cell = 1\n",
     "sphericity(volume[curr_cell], surface[curr_cell])"
@@ -306,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e903b0cd",
+   "id": "3c69f559",
    "metadata": {},
    "source": [
     "## Initializing a class\n",
@@ -315,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "491751cd",
+   "execution_count": 15,
+   "id": "3d222dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c6eb60",
+   "id": "4f488a40",
    "metadata": {},
    "source": [
     "It is now possible to call the class like that:"
@@ -340,10 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59a24bd2",
+   "execution_count": 16,
+   "id": "4fa12e9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10 [2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "c = Cell(surface=5, volume=10, position=[2, 3])\n",
     "print(c.surface, c.volume, c.position)"
@@ -351,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de205f71",
+   "id": "b72c2724",
    "metadata": {},
    "source": [
     "## Private attribute/methods\n",
@@ -360,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17a4d8bb",
+   "execution_count": 17,
+   "id": "a3cd51d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,10 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7bf5f6d0",
+   "execution_count": 18,
+   "id": "c6595c50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm hidden\n",
+      "The error was:\n",
+      "'Cell' object has no attribute '__hidden_function'\n"
+     ]
+    }
+   ],
    "source": [
     "c = Cell(6, 1, [0, 0])\n",
     "c.call_hidden()\n",
@@ -395,6 +479,62 @@
     "except Exception as e:\n",
     "    print('The error was:')\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29b1ff2",
+   "metadata": {},
+   "source": [
+    "## Rewritting the \"basic\" functions\n",
+    "It is possible to rewrite the basic functions such as the `__str__` function that is called by the `print` function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "89006b60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cell:\n",
+    "    def __str__(self):\n",
+    "        out = ('I am a cell with:\\n'\n",
+    "               f'\\tVolume  : {self.volume}\\n'\n",
+    "               f'\\tSurface : {self.surface}\\n'\n",
+    "               f'\\tPosition: {self.position}\\n')\n",
+    "        return out\n",
+    "    \n",
+    "    def sphericity(self):\n",
+    "        return pi**(1./3)*(6*self.volume)**(2./3)/self.surface\n",
+    "    \n",
+    "    def __init__(self, surface=None, volume=None, position=[None, None]):\n",
+    "        self.surface = surface\n",
+    "        self.volume = volume\n",
+    "        self.position = position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dfd02c58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a cell with:\n",
+      "\tVolume  : 1\n",
+      "\tSurface : 6\n",
+      "\tPosition: [0, 0]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Cell(6, 1, [0, 0])\n",
+    "print(c)"
    ]
   }
  ],
